--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: stream_summary_builder
 description: A new Flutter package.
-version: 0.0.1
-author:
-homepage: ''
+version: 0.1.0-dev.1
+homepage: 'https://github.com/caseycrogers/stream_summary_builder'
 
 environment:
   sdk: '>=2.12.0-0 <3.0.0'
