--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  stream_summary_builder: ^0.1.0-dev.4
 
 
   # The following adds the Cupertino Icons font to your application.
