--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: stream_summary_builder
-description: A new Flutter package.
-version: 0.1.0-dev.4
+description: An implementation of `StreamBuilderBase` that folds new stream events into a
+  summary and builds with the summary of stream events seen so far.
+version: 0.1.0-dev.5
 homepage: 'https://github.com/caseycrogers/stream_summary_builder'
 
 environment:
