--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,12 +7,13 @@ version: 0.1.0+1
 
 environment:
   sdk: '>=2.12.0-0 <3.0.0'
-  flutter: '>=1.17.0'
+  flutter: '>=1.25.0-0'
 
 dependencies:
   flutter:
     sdk: flutter
-  stream_summary_builder: ^0.1.0-dev.5
+  stream_summary_builder:
+    path: ../
 
 
   # The following adds the Cupertino Icons font to your application.
