--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: stream_summary_builder
 description: An implementation of `StreamBuilderBase` that folds new stream events into a
   summary and builds with the summary of stream events seen so far.
-version: 0.1.0-dev.5
+version: 0.1.0-dev.6
 homepage: 'https://github.com/caseycrogers/stream_summary_builder'
 
 environment:
   sdk: '>=2.12.0-0 <3.0.0'
-  flutter: '>=1.17.0'
+  flutter: '>=1.25.0-0'
 
 dependencies:
   flutter:
