added tests and moved content to src

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: stream_summary_builder
 description: An implementation of `StreamBuilderBase` that folds new stream events into a
   summary and builds with the summary of stream events seen so far.
-version: 0.1.0-dev.7
+version: 1.0.0
 homepage: 'https://github.com/caseycrogers/stream_summary_builder'
 
 environment:
@@ -15,5 +15,3 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-flutter:
